# IBIS

./: CMakeLists.txt  README.md  ibis.cpp  ibis.h  main.cpp
